@@ -1,5 +1,15 @@
 *Edge*
 
+* Disable the Accept header by default [Michael Koziarski]
+
+    The accept header is poorly implemented by browsers and causes strange
+	errors when used on public sites where crawlers make requests too.  You
+	should use formatted urls (e.g. /people/1.xml) to support API clients.
+
+	Alternatively to re-enable it you need to set:
+
+	config.action_controller.use_accept_header = true
+
 * Remove define_javascript_functions, javascript_include_tag and friends are far superior. [Michael Koziarski]
 
 * Deprecate :use_full_path render option. The supplying the option no longer has an effect [Josh Peek]
